2003-10-27  Moritz Balz  <verteiler@mbalz.de>

	* gdk/Drawable.custom : add a S.D.Rectangle overload for DrawRect.

2003-10-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gtk/Gtk.metadata: Added the rest of sources/Gtk.metadata 
	  and sorted the metadata.
	* gtk/gtk-api.xml: Regenerated, to reflect the above changes.
	  Tags are swapped around. PaintBox, PaintBoxGap, PaintShadow and
	  PaintShadowGap are moved arround as well.
	* sources/Gtk.metadata: Removed

2003-10-23  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gtk/Gtk.metadata: Added metadata from sources/Gtk.metadata
	* gtk/gtk-api.xml: Reflects changes of the metadata move, 
	  tags are swapped around.
	* sources/Gtk.metadata: Removed metadata, which are moved to 
	  gtk/Gtk.metadata

2003-10-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gtk/Gtk.metadata: Added metadata from sources/Gtk.metadata
	* gtk/gtk-api.xml: Reflects changes of the metadata move, 
	  tags are swapped around.
	* gtkhtml/Gtk.metadata: Added metadata from sources/Gtk.metadata
	* gtkhtml/gtkhtml-api.xml: Reflects changes of the metadata move, 
	  tags are swapped around.
	* sources/Gtk.metadata: Removed metadata, which are moved to 
	  gtk/Gtk.metadata and gtkhtml/Gtk.metadata

2003-10-22  Mike Kestner  <mkestner@ximian.com>

	* gtkhtml/gtkhtml-api.xml : regenerated
	* sources/makefile : add gtkhtml-embedded.* to the parse. Patch
	proposed by orph on bug #49875.

2003-10-20  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : mark TargetEntry.flags as type TargetFlags.
	* gtk/gtk-api.xml : regenerated  [fixes #49859]

2003-10-20  Mike Kestner  <mkestner@ximian.com>

	* generator/Parameters.cs : treat interface out params like objects.
	* gtk/gtk-api.xml : regenerated
	* gtk/Gtk.metadata : mark TreeSelection.GetSelected params out.
	* gtk/TreeSelection.custom : emptied since it's now generated.
	* sources/Gtk.metadata : kill hide of TreeSelection.GetSelected.
	[fixes #49858]

2003-10-20  Mike Kestner  <mkestner@ximian.com>
