@@ -1,3 +1,9 @@
+2003-10-28  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/BoxedGen.cs : generate GLib.Value ctors. [fixes #47168]
+	* generator/Property.cs : use new Boxed value ctors.
+	* generator/StructBase.cs : use existing Writer if available.
+
 2003-10-27  Moritz Balz  <verteiler@mbalz.de>
 
 	* gdk/Drawable.custom : add a S.D.Rectangle overload for DrawRect.
